--- a/app/admin/view/system/language/index.html
+++ b/app/admin/view/system/language/index.html
@@ -3,11 +3,12 @@
 <div class="x-nav">
           <span class="layui-breadcrumb">
             <a href="">首页</a>
-            <a href="">演示</a>
+            <a href="">语言管理</a>
             <a>
-              <cite>导航元素</cite></a>
+              <cite>语言列表</cite></a>
           </span>
-    <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
+    <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"
+       onclick="location.reload()" title="刷新">
         <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
 </div>
 <div class="layui-fluid">
@@ -15,17 +16,17 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-                    <button class="layui-btn" onclick="xadmin.open('添加用户','./member-add.html',600,400)"><i class="layui-icon"></i>添加</button>
+                    <button class="layui-btn" onclick="xadmin.open('添加','{:url(\'system/add_language\')}',600,360)"><i
+                            class="layui-icon"></i>添加
+                    </button>
                 </div>
                 <div class="layui-card-body layui-table-body layui-table-main">
                     <table class="layui-table layui-form">
                         <colgroup>
-                            <col width="10">
                             <col width="80">
                             <col width="120">
                             <col width="120">
-                            <col >
+                            <col>
                             <col width="120">
                             <col width="20">
                             <col>
@@ -35,7 +36,6 @@
                             <th>
                                 <input type="checkbox" lay-filter="checkall" name="" lay-skin="primary">
                             </th>
-                            <th>ID</th>
                             <th>语种</th>
                             <th>标识（code）</th>
                             <th>描述（description）</th>
@@ -45,176 +45,32 @@
                         </tr>
                         </thead>
                         <tbody>
+                        {notempty name="data.data"}
+                        {volist name="data.data" id="vo"}
                         <tr>
-                            <td>
-                                <input type="checkbox" name="id" value="1"   lay-skin="primary">
-                            </td>
-                            <td>1</td>
-                            <td>小明</td>
-                            <td>男</td>
-                            <td>13000000000</td>
-                            <td>北京市 海淀区</td>
-                            <td class="td-status">
-                                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
+                            <td>{$vo.id}</td>
+                            <td>{$vo.name}</td>
+                            <td>{$vo.code}</td>
+                            <td>{$vo.remark}</td>
+                            <td>{$vo.update_time|date='Y-m-d'}</td>
+                            <td class="td-status"><span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
                             <td class="td-manage">
-                                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                    <i class="layui-icon">&#xe601;</i>
+                                <a title="编辑" onclick="xadmin.open('编辑','{:url(\'system/edit_language\',[\'id\'=>$vo.id])}',600,400)"
+                                   href="javascript:;" class="layui-btn">
+                                    <i class="layui-icon" style="font-size: 22px">&#xe642;</i>
                                 </a>
-                                <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                    <i class="layui-icon">&#xe642;</i>
-                                </a>
-                                <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                    <i class="layui-icon">&#xe631;</i>
-                                </a>
-                                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                    <i class="layui-icon">&#xe640;</i>
+                                <a title="删除" onclick="changeStatus(this,'要删除的id')" href="javascript:;" class="layui-btn layui-btn-danger">
+                                    <i class="layui-icon" style="font-size: 22px">&#xe640;</i>
                                 </a>
                             </td>
                         </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="id"  value="2" lay-skin="primary">
-                            </td>
-                            <td>1</td>
-                            <td>小明</td>
-                            <td>男</td>
-                            <td>13000000000</td>
-                            <td>北京市 海淀区</td>
-                            <td class="td-status">
-                                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-                            <td class="td-manage">
-                                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                    <i class="layui-icon">&#xe601;</i>
-                                </a>
-                                <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                    <i class="layui-icon">&#xe642;</i>
-                                </a>
-                                <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                    <i class="layui-icon">&#xe631;</i>
-                                </a>
-                                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                    <i class="layui-icon">&#xe640;</i>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="id" value="3"  lay-skin="primary">
-                            </td>
-                            <td>1</td>
-                            <td>小明</td>
-                            <td>男</td>
-                            <td>13000000000</td>
-                            <td>北京市 海淀区</td>
-                            <td class="td-status">
-                                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-                            <td class="td-manage">
-                                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                    <i class="layui-icon">&#xe601;</i>
-                                </a>
-                                <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                    <i class="layui-icon">&#xe642;</i>
-                                </a>
-                                <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                    <i class="layui-icon">&#xe631;</i>
-                                </a>
-                                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                    <i class="layui-icon">&#xe640;</i>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="id" value="4"  lay-skin="primary">
-                            </td>
-                            <td>1</td>
-                            <td>小明</td>
-                            <td>男</td>
-                            <td>13000000000</td>
-                            <td>北京市 海淀区</td>
-                            <td class="td-status">
-                                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-                            <td class="td-manage">
-                                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                    <i class="layui-icon">&#xe601;</i>
-                                </a>
-                                <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                    <i class="layui-icon">&#xe642;</i>
-                                </a>
-                                <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                    <i class="layui-icon">&#xe631;</i>
-                                </a>
-                                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                    <i class="layui-icon">&#xe640;</i>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="id" value="5"  lay-skin="primary">
-                            </td>
-                            <td>1</td>
-                            <td>小明</td>
-                            <td>男</td>
-                            <td>13000000000</td>
-                            <td>北京市 海淀区</td>
-                            <td class="td-status">
-                                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-                            <td class="td-manage">
-                                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                    <i class="layui-icon">&#xe601;</i>
-                                </a>
-                                <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                    <i class="layui-icon">&#xe642;</i>
-                                </a>
-                                <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                    <i class="layui-icon">&#xe631;</i>
-                                </a>
-                                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                    <i class="layui-icon">&#xe640;</i>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="id" value="6" lay-skin="primary">
-                            </td>
-                            <td>1</td>
-                            <td>小明</td>
-                            <td>男</td>
-                            <td>13000000000</td>
-                            <td>北京市 海淀区</td>
-                            <td class="td-status">
-                                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-                            <td class="td-manage">
-                                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                    <i class="layui-icon">&#xe601;</i>
-                                </a>
-                                <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                    <i class="layui-icon">&#xe642;</i>
-                                </a>
-                                <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                    <i class="layui-icon">&#xe631;</i>
-                                </a>
-                                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                    <i class="layui-icon">&#xe640;</i>
-                                </a>
-                            </td>
-                        </tr>
+                        {/volist}
+                        {/notempty}
                         </tbody>
                     </table>
                 </div>
                 <div class="layui-card-body ">
-                    <div class="page">
-                        <div>
-                            <a class="prev" href="">&lt;&lt;</a>
-                            <a class="num" href="">1</a>
-                            <span class="current">2</span>
-                            <a class="num" href="">3</a>
-                            <a class="num" href="">489</a>
-                            <a class="next" href="">&gt;&gt;</a>
-                        </div>
-                    </div>
+                    <div id="page" class="page"></div>
                 </div>
             </div>
         </div>
@@ -223,27 +79,18 @@
 {/block}
 {block name="javascript"}
 <script>
-    layui.use(['laydate','form','table'], function(){
-        var laydate = layui.laydate;
-        var  form = layui.form;
-        // 监听全选
-        form.on('checkbox(checkall)', function(data){
-            if(data.elem.checked){
-                $('tbody input').prop('checked',true);
-            }else{
-                $('tbody input').prop('checked',false);
+    layui.use(['laypage'], function () {
+        var laypage = layui.laypage;
+        laypage.render({
+            elem: 'page',
+            count: '{$data.total}',
+            limit: '{$data.per_page}',
+            curr: '{$data.current_page}',
+            jump: function (obj, first) {
+                if (!first) {
+                    location.href = '?page=' + obj.curr;
+                }
             }
-            form.render('checkbox');
-        });
-
-        //执行一个laydate实例
-        laydate.render({
-            elem: '#start' //指定元素
-        });
-
-        //执行一个laydate实例
-        laydate.render({
-            elem: '#end' //指定元素
         });
     });
 </script>
