--- a/app/admin/view/user/user/login.html
+++ b/app/admin/view/user/user/login.html
@@ -38,7 +38,7 @@
         <hr class="hr15">
         <div class="layui-inline">
             <div class="layui-input-inline" style="width: 135px;">
-                <input type="password" name="" autocomplete="off" class="layui-input" placeholder="验证码">
+                <input type="text" name="captcha" autocomplete="off" class="layui-input" placeholder="验证码" >
             </div>
             <div class="layui-input-inline">
                 <img src="{:captcha_src()}" alt="captcha" style="height: 50px;margin-left: 10px">
