--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -20,9 +20,9 @@
                                     <cite>语言列表</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('等级管理','member-list1.html')">
+                                <!--<a onclick="xadmin.add_tab('等级管理','member-list1.html')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>已停用</cite></a>
+                                    <cite>已停用</cite></a>-->
                             </li>
                         </ul>
                     </li>
@@ -58,7 +58,7 @@
                         </a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('角色管理','{:url(\'role_list\')}')">
+                                <a onclick="xadmin.add_tab('基本设置','{:url(\'system/setting\')}')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>基本设置</cite>
                                 </a>
@@ -75,17 +75,19 @@
             </li>
             <li>
                 <a href="javascript:;">
-                    <i class="iconfont left-nav-li" lay-tips="图标字体">&#xe6b4;</i>
-                    <cite>图标字体</cite>
-                    <i class="iconfont nav_right">&#xe697;</i></a>
+                    <i class="iconfont left-nav-li" lay-tips="类目管理">&#xe699;</i>
+                    <cite>类目管理</cite>
+                    <i class="iconfont nav_right">&#xe697;</i>
+                </a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('图标对应字体','unicode.html')">
+                        <a onclick="xadmin.add_tab('产品分类','{:url(\'category/product\')}')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>图标对应字体</cite></a>
+                            <cite>产品分类</cite></a>
                     </li>
                 </ul>
             </li>
+
             <!--<li>
                 <a href="javascript:;">
                     <i class="iconfont left-nav-li" lay-tips="其它页面">&#xe6b4;</i>
@@ -114,49 +116,6 @@
                     </li>
                 </ul>
             </li>-->
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont left-nav-li" lay-tips="第三方组件">&#xe6b4;</i>
-                    <cite>layui第三方组件</cite>
-                    <i class="iconfont nav_right">&#xe697;</i></a>
-                <ul class="sub-menu">
-                    <li>
-                        <a onclick="xadmin.add_tab('滑块验证','https://fly.layui.com/extend/sliderVerify/')" target="">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>滑块验证</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('富文本编辑器','https://fly.layui.com/extend/layedit/')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>富文本编辑器</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('eleTree 树组件','https://fly.layui.com/extend/eleTree/')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>eleTree 树组件</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('图片截取','https://fly.layui.com/extend/croppers/')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>图片截取</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('formSelects 4.x 多选框','https://fly.layui.com/extend/formSelects/')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>formSelects 4.x 多选框</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('Magnifier 放大镜','https://fly.layui.com/extend/Magnifier/')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>Magnifier 放大镜</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('notice 通知控件','https://fly.layui.com/extend/notice/')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>notice 通知控件</cite></a>
-                    </li>
-                </ul>
-            </li>
         </ul>
     </div>
 </div>
