--- a/app/admin/view/common/base.html
+++ b/app/admin/view/common/base.html
@@ -24,6 +24,7 @@
 </body>
 <script src="{{admin}}/lib/layui/layui.js" charset="utf-8"></script>
 <script type="text/javascript" src="{{admin}}/js/xadmin.js"></script>
+<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 {block name="javascript"}
 <!--重载业务逻辑的js方法-->
 {/block}
