新增商品 功能细节

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -95,9 +95,9 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('产品分类','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>图片</cite></a>
+                        <a onclick="xadmin.add_tab('图片资源','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')">
+                            <i class="iconfont">&#xe6a7;</i><cite>图片管理</cite>
+                        </a>
                     </li>
                 </ul>
             </li>
