--- a/app/admin/view/content/product/add.html
+++ b/app/admin/view/content/product/add.html
@@ -6,6 +6,7 @@
             <div class="layui-tab">
                 <ul class="layui-tab-title">
                     <li class="layui-this">基本信息</li>
+                    <li>规格参数</li>
                     <li>图片/特色</li>
                     <li>PC详情</li>
                     <li>Mobile详情</li>
@@ -21,8 +22,7 @@
                                     <option value="0">顶级</option>
                                     {notempty name='category'}
                                     {volist name="category" id="vo"}
-                                    <option value="{$vo.id}" {if($parent_id== $vo.id)}selected{
-                                    /if}>{$vo.delimiter|raw}{$vo.name}</option>
+                                    <option value="{$vo.id}">{$vo.delimiter|raw}{$vo.name}</option>
                                     {/volist}
                                     {/notempty}
                                 </select>
@@ -48,11 +48,11 @@
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <label for="name" class="layui-form-label">
+                            <label for="title" class="layui-form-label">
                                 <span class="x-red">*</span>产品标题
                             </label>
                             <div class="layui-input-block w50">
-                                <input type="text" id="name" name="name" required="" lay-verify="required"
+                                <input type="text" id="title" name="title" required="" lay-verify="required"
                                        autocomplete="off" class="layui-input">
                             </div>
                         </div>
@@ -96,14 +96,21 @@
                         </div>
                     </div>
                     <div class="layui-tab-item">
+                        <div class="layui-input-block">
+                                <textarea name="specifications" id="specifications" placeholder="请输入内容"
+                                          class="layui-textarea" lay-verify="specifications"></textarea>
+                        </div>
+                    </div>
+                    <div class="layui-tab-item">
                         <div class="layui-form-item">
                             <label for="thumbnail" class="layui-form-label">
                                 缩略图
                             </label>
                             <div class="layui-input-inline">
-                                <button class="layui-btn" onclick="xadmin.open('添加产品','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')"><i class="layui-icon"></i>选择</button>
-                                <div class="layui-upload-list" style="height: 92px">
-                                    <input type="hidden" name="thumbnail" value="thumbnail" id="thumbnail">
+                                <button class="layui-btn" type="button" onclick="xadmin.open('添加产品','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')"><i class="layui-icon"></i>选择</button>
+                                <div class="image" style="height: 92px;padding-top: 5px">
+                                    <img src="" alt="" style="height: 92px">
+                                    <input type="hidden" name="thumbnail" value="" id="thumbnail">
                                 </div>
                             </div>
                         </div>
@@ -112,9 +119,9 @@
                                 相册
                             </label>
                             <div class="layui-input-block">
-                                <button class="layui-btn" onclick="xadmin.open('选择图片','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')"><i class="layui-icon"></i>选择</button>
+                                <button class="layui-btn" type="button" onclick="xadmin.open('选择图片','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')"><i class="layui-icon"></i>选择</button>
                                 <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;min-height: 100px">
-                                    <div class="layui-upload-list" id="demo2">
+                                    <div class="img-list" id="img-list">
                                         <input type="hidden" name="album" id="album">
                                     </div>
                                 </blockquote>
@@ -174,24 +181,15 @@
         function () {
             let $ = layui.jquery;
             let form = layui.form, upload = layui.upload, tinymce = layui.tinymce, layer = layui.layer;
-            tinymce.render({
-                elem:"#features",
-                height:300,
-                plugins:'code',
-                toolbar:'code',
-                menubar:false,
-            })
-            tinymce.render({
-                elem: "#desktop",
-                height: $(window).height()-80,
+            tinymce.render({elem:"#features", height:300, plugins:'code', toolbar:'code', menubar:false,});
+            tinymce.render({elem:"#specifications", height:300, plugins:'code', toolbar:'code', menubar:false,});
+            tinymce.render({elem: "#desktop", height: $(window).height()-80,
                 plugins: 'code autosave quickbars print preview searchreplace autolink fullscreen image link media codesample table charmap hr advlist lists wordcount imagetools indent2em',
                 toolbar: 'code undo redo | forecolor backcolor bold italic underline strikethrough | indent2em alignleft aligncenter alignright alignjustify outdent indent | link bullist numlist image table codesample | formatselect fontselect fontsizeselect',
                 menubar:false,
                 images_upload_url:''
-            })
-            tinymce.render({
-                elem: "#mobile",
-                height: $(window).height()-80,
+            });
+            tinymce.render({elem: "#mobile", height: $(window).height()-80,
                 plugins: 'code autosave quickbars print preview searchreplace autolink fullscreen image link media codesample table charmap hr advlist lists wordcount imagetools indent2em',
                 toolbar: 'code undo redo | forecolor backcolor bold italic underline strikethrough | indent2em alignleft aligncenter alignright alignjustify outdent indent | link bullist numlist image table codesample | formatselect fontselect fontsizeselect',
                 menubar:false
@@ -199,6 +197,9 @@
             form.verify({
                 features:function(){
                     tinyMCE.get("features").save()
+                },
+                specifications:function(){
+                    tinyMCE.get("specifications").save()
                 },
                 desktop: function () {
                     tinyMCE.get("desktop").save() //好苦啊，tinyMCE需要这样保存到input框
