添加幻灯片模块

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -109,6 +109,11 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
+                        <a onclick="xadmin.add_tab('幻灯片管理','{:url(\'content/banner_index\')}')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>幻灯片</cite></a>
+                    </li>
+                    <li>
                         <a onclick="xadmin.add_tab('产品管理','{:url(\'content/product_index\')}')">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>产品管理</cite></a>
