--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Home - mintHouz</title>
-    <link rel="stylesheet" href="../../lib/iconfont/iconfont.css">
-    <link rel="stylesheet" href="../css/public/components.css">
+    <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
+    <link rel="stylesheet" href="{{frontend}}/desktop/css/public/components.css">
     <!--私有页面样式文件-->
-    <link rel="stylesheet" href="../../lib/Swiper/swiper.min.css">
-    <link rel="stylesheet" href="../css/page/Home.css">
+    <link rel="stylesheet" href="{{frontend}}/lib/Swiper/swiper.min.css">
+    <link rel="stylesheet" href="{{frontend}}/desktop/css/page/Home.css">
     <!--私有页面样式结束-->
 </head>
 <body>
@@ -34,7 +34,7 @@
             <div class="logo">
                 <h1>
                     <a href="./Home.html">
-                        <img src="../img/minthouz-slogan.png" alt="">
+                        <img src="{{frontend}}/desktop/img/minthouz-slogan.png" alt="">
                     </a>
                 </h1>
             </div>
@@ -474,11 +474,11 @@
     </div>
 </footer>
 <!--footer /-->
-<script src="../../lib/JQuery/JQuery-3.4.0.js"></script>
-<script src="../js/public.js"></script>
+<script src="{{frontend}}/lib/JQuery/JQuery-3.4.0.js"></script>
+<script src="{{frontend}}/desktop/js/public.js"></script>
 <!--私有业务开始-->
-<script src="../../lib/layer/2.4/layer.js"></script>
-<script src="../../lib/Swiper/swiper.min.js"></script>
+<script src="{{frontend}}/lib/layer/2.4/layer.js"></script>
+<script src="{{frontend}}/lib/Swiper/swiper.min.js"></script>
 <script>
     var mySwiper = new Swiper('.swiper-container', {
         loop: true,
