--- a/app/admin/view/media/image/index.html
+++ b/app/admin/view/media/image/index.html
@@ -72,8 +72,8 @@
                                     <input class="ByCopy" type="text" value="{$baseUrl}/{$item.key}" style="position: absolute;top: 0;left: 0;z-index: -99;width: 1px;height: 1px;border: none;background: transparent">
                                     <li class="btnCopy"><a href="#" title="复制url链接"><span class="iconfont" style="font-size: 16px">&#xe744;</span>复制</a></li>
                                     <li><a href="javascript:;" onclick="del('{:url(\'media/del_image\',[\'key\'=>$item.key])}')" title="删除" style="font-size: 16px"><span class="iconfont">&#xe69d;</span><span style="font-size: 12px"> 删除</span></a></li>
-                                    <li><a href="javascript:;" onclick="insert('image','{$baseUrl}/{$item.key}')" title="选择并插入" style="font-size: 16px"><span class="iconfont">&#xe6f7;</span><span style="font-size: 12px"> 到缩图</span></a></li>
-                                    <li><a href="javascript:;" onclick="in_list('img-list','{$baseUrl}/{$item.key}')" title="插入到列表" style="font-size: 16px"><span class="iconfont">&#xe6f7;</span><span style="font-size: 12px"> 到相册</span></a></li>
+                                    <li><a href="javascript:;" onclick="insert('image','{$baseUrl}/{$item.key}')" title="选择并插入" style="font-size: 16px"><span class="iconfont">&#xe6f7;</span><span style="font-size: 12px"> 插入到</span></a></li>
+                                    <li><a href="javascript:;" onclick="in_list('img-list','{$baseUrl}/{$item.key}')" title="插入到列表" style="font-size: 16px"><span class="iconfont">&#xe6f7;</span><span style="font-size: 12px"> 插入相册</span></a></li>
                                 </ul>
                             </span>
                         </div>
