--- a/app/admin/view/content/prettiest/index.html
+++ b/app/admin/view/content/prettiest/index.html
@@ -16,7 +16,7 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body ">
-                    <form class="layui-form layui-col-space5">
+                    <!--<form class="layui-form layui-col-space5">
                         <div class="layui-inline layui-show-xs-block">
                             <input class="layui-input"  autocomplete="off" placeholder="开始日" name="start" id="start">
                         </div>
@@ -29,45 +29,41 @@
                         <div class="layui-inline layui-show-xs-block">
                             <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
                         </div>
-                    </form>
+                    </form>-->
                 </div>
                 <div class="layui-card-header">
                     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-                    <button class="layui-btn" onclick="xadmin.full('添加产品','{:url(\'content/add_banner\')}')"><i class="layui-icon"></i>添加</button>
+                    <button class="layui-btn" onclick="xadmin.full('添加','{:url(\'content/add_prettiest\',[\'type\'=>$type])}')"><i class="layui-icon"></i>添加</button>
                 </div>
                 <div class="layui-card-body ">
                     <table class="layui-table layui-form">
                         <thead>
                         <tr>
-                            <th>
-                                <input type="checkbox" name=""  lay-skin="primary">
-                            </th>
-                            <th>ID</th>
-                            <th>封面图</th>
-                            <th>产品标题</th>
-                            <th>型号</th>
-                            <th>关键词</th>
-                            <th>创建时间</th>
-                            <th>状态</th>
-                            <th>操作</th>
+                            <th width="40">ID</th>
+                            <th width="70">排序</th>
+                            <th width="120">图片</th>
+                            <th width="200">标题</th>
+                            <th width="200">描述</th>
+                            <th>路径</th>
+                            <th width="70">创建时间</th>
+                            <th width="40">状态</th>
+                            <th width="120">操作</th>
                         </thead>
                         <tbody>
                         {notempty name="data.data"}
                         {volist name="data.data" id="vo"}
                         <tr>
-                            <td>
-                                <input type="checkbox" name=""  lay-skin="primary">
-                            </td>
                             <td>{$vo.id}</td>
+                            <td><input type="text" name="listorder" value="{$vo.listorder}" class="layui-input">  </td>
                             <td>
                                 <span style="width: 100px;height: 100px;display: inline-block" >
-                                    <img src="{$vo.thumbnail}" alt=""  style="width: 100%;height: 100%">
+                                    <img src="{$vo.image}" alt=""  style="width: 100%;height: 100%">
                                 </span>
 
                             </td>
                             <td>{$vo.title}</td>
-                            <td>{$vo.model}</td>
-                            <td>{$vo.keywords}</td>
+                            <td>{$vo.description}</td>
+                            <td>{$vo.path}</td>
                             <td>{notempty name="vo.create_time"}{$vo.create_time|date="Y-m-d"}{/notempty}</td>
                             <td class="td-status"><span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
                             <td class="td-manage">
@@ -75,7 +71,7 @@
                                     <i class="layui-icon">&#xe601;</i>
                                 </a>-->
                                 <button class="layui-btn layui-btn layui-btn-xs"
-                                        onclick="xadmin.full('编辑','{:url(\'content/edit_product\',[\'id\'=>$vo.id])}')">
+                                        onclick="xadmin.full('编辑','{:url(\'content/edit_prettiest\',[\'id\'=>$vo.id])}')">
                                     <i class="layui-icon">&#xe642;</i>编辑
                                 </button>
                                 <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
