添加重大通知栏目

--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -11,6 +11,13 @@
     <!--私有页面样式结束-->
 </head>
 <body>
+<!-- 重大通知栏 -->
+<div class="g-notice" id="g-notice">
+    <a class="des" href="#">minthouz、物流及客服公告>></a>
+    <span class="close">X</span>
+</div>
+<!-- 重大通知栏 -->
+
 <!--header-->
 <header class="g-hd">
 
