--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -106,6 +106,26 @@ body {
     }
 }
 
+//重大通知
+.g-notice {
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    color: @whiteSmoke;
+    .des {
+        color: @whiteSmoke;
+        &:hover {
+            color: @activeColor;
+            text-decoration: underline;
+        }
+    }
+    .close {
+        margin-left: 20px;
+        cursor: pointer;
+    }
+}
+//重大通知
+
 //g-hd
 .g-hd {
     position: relative;
