--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -114,6 +114,7 @@ body {
     color: @whiteSmoke;
     .des {
         color: @whiteSmoke;
+        #transition(all .2s linear);
         &:hover {
             color: @activeColor;
             text-decoration: underline;
