--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -615,6 +615,7 @@ body {
 .g-foot .foot .foot-contact {
   float: left;
   width: 30%;
+  line-height: 30px;
 }
 .g-foot .foot .foot-contact h3 {
   color: #fff;
@@ -624,6 +625,17 @@ body {
   color: #888;
   font-size: 14px;
   line-height: 30px;
+}
+.g-foot .foot .foot-contact p a {
+  color: #00A82D;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transform: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.g-foot .foot .foot-contact p a:hover {
+  color: #14bc41;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .g-foot .about {
