产品列表页

--- a/public/static/frontend/desktop/css/page/Home.less
+++ b/public/static/frontend/desktop/css/page/Home.less
@@ -8,6 +8,9 @@
 @import "../public/variables";
 
 .banner {
+    .swiper-wrapper {
+        height: auto;
+    }
     .swiper-wrapper .swiper-slide {
         position: relative;
         .des {
