--- a/public/static/frontend/desktop/css/page/Home.css
+++ b/public/static/frontend/desktop/css/page/Home.css
@@ -4,6 +4,9 @@
 * @author: Alan(alan_webdeveloper@163.com)
 * @update: 2020-05-28 10:23
 */
+.banner .swiper-wrapper {
+  height: auto;
+}
 .banner .swiper-wrapper .swiper-slide {
   position: relative;
 }
