--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -481,6 +481,12 @@ body {
             }
         }
     }
+    .copyright {
+        text-align: center;
+        background: @blackColor;
+        color: @whiteSmoke;
+        padding: 5px 0;
+    }
     @media screen and (min-width: 768px) and (max-width: 991px) {
         .about {
             .clearFix();
@@ -508,6 +514,9 @@ body {
         }
         .foot {
             padding: 100px 10px;
+        }
+        .copyright {
+            font-size: 12px;
         }
     }
     @media screen and (min-width: 992px) and (max-width: 1199px) {
