--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - mintHouz</title>
+    <title>{$BaseSetting.title} - mintHouz</title>
+    <meta name="keywords" content="{$BaseSetting.keywords}">
+    <meta name="description" content="{$BaseSetting.description}">
     <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
     <link rel="stylesheet" href="{{frontend}}/desktop/css/public/components.css">
     <!--私有页面样式文件-->
@@ -479,10 +481,15 @@
             </div>
         </div>
     </div>
+
+    <div class="copyright">
+        <p>{$BaseSetting.information|raw}</p>
+    </div>
 </footer>
 <!--footer /-->
 <script src="{{frontend}}/lib/JQuery/JQuery-3.4.0.js"></script>
 <script src="{{frontend}}/desktop/js/public.js"></script>
+{$BaseSetting.analysis_code|raw}
 <!--私有业务开始-->
 <script src="{{frontend}}/lib/layer/2.4/layer.js"></script>
 <script src="{{frontend}}/lib/Swiper/swiper.min.js"></script>
