--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -637,6 +637,12 @@ body {
 .g-foot .foot .foot-contact p a:hover {
   color: #14bc41;
 }
+.g-foot .copyright {
+  text-align: center;
+  background: #000;
+  color: #888;
+  padding: 5px 0;
+}
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .g-foot .about {
     padding: 40px 10px;
@@ -680,6 +686,9 @@ body {
   }
   .g-foot .foot {
     padding: 100px 10px;
+  }
+  .g-foot .copyright {
+    font-size: 12px;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
