--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- 重大通知栏 -->
 <div class="g-notice" id="g-notice">
-    <a class="des" href="#">minthouz、物流及客服公告>></a>
+    <a class="des" href="#">minthouz、物流及客服公告>> {:lang('Home')}</a>
     <span class="close">X</span>
 </div>
 <!-- 重大通知栏 -->
@@ -43,7 +43,7 @@
             <div class="logo">
                 <h1>
                     <a href="./Home.html">
-                        <img src="{{frontend}}/desktop/img/minthouz-slogan.png" alt="">
+                        <img src="{$BaseSetting.logo}" alt="">
                     </a>
                 </h1>
             </div>
