后台加通知管理功能

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -109,6 +109,11 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
+                        <a onclick="xadmin.add_tab('通知管理','{:url(\'content/notice\')}')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>通知管理</cite></a>
+                    </li>
+                    <li>
                         <a href="javascript:;">
                             <i class="iconfont left-nav-li" lay-tips="推荐管理">&#xe699;</i>
                             <cite>推荐管理</cite>
