--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -14,10 +14,12 @@
 </head>
 <body>
 <!-- 重大通知栏 -->
+{notempty name="notice"}
 <div class="g-notice" id="g-notice">
-    <a class="des" href="#">minthouz、物流及客服公告>> {:lang('Home')}</a>
+    <a href="{$notice.path}" class="des">{$notice.notice}</a>
     <span class="close">X</span>
 </div>
+{/notempty}
 <!-- 重大通知栏 -->
 
 <!--header-->
@@ -26,7 +28,7 @@
     <div class="hd">
         <div class="common-width">
             <div class="about">
-                <span><a href="./Home.html">MINTHOUZ</a></span>
+                <span><a href="#">MINTHOUZ</a></span>
                 <span><a href="#">ABOUT US</a></span>
                 <span><a href="#" target="_blank">FIND US ON FACEBOOK</a></span>
             </div>
@@ -42,7 +44,7 @@
         <div class="common-width">
             <div class="logo">
                 <h1>
-                    <a href="./Home.html">
+                    <a href="#">
                         <img src="{$BaseSetting.logo}" alt="">
                     </a>
                 </h1>
@@ -51,7 +53,7 @@
             <div class="menu-box">
                 <ul class="menu-list" id="menu-list">
                     <li class="menu-item">
-                        <a class="item-link" href="./product-list.html">All Products</a>
+                        <a class="item-link" href="#">All Products</a>
 
                         <!--<div class="all-category">
                             <ul class="category-list">
@@ -69,42 +71,43 @@
                         </div>-->
 
                     </li>
+                    {volist name="treeCategory" id="vo"}
                     <li class="menu-item">
-                        <a class="item-link" href="#">USB Fan</a>
+                        <a class="item-link" href="#">{$vo.name}</a>
                         <div class="item-children">
                             <ul class="common-width">
                                 <li class="children-list">
-                                    <a href="./product-detail.html">
+                                    <a href="#">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/miBoxS.jpg?width=140&height=140" alt="">
                                         <p>Mi Box S</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="./product-detail.html">
+                                    <a href="#">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/Projector.jpg?width=140&height=140" alt="">
                                         <p>Mi Laser Projector 150''</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="./product-detail.html">
+                                    <a href="#">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/Product/smartcompactprojector/compactprojector140.jpg?width=140&height=140" alt="">
                                         <p>Mi Smart Compact Projector</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="./product-detail.html">
+                                    <a href="#">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/secutrity-camera-140140.jpg?width=140&height=140" alt="">
                                         <p>Mi Home Security Camera</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="./product-detail.html">
+                                    <a href="#">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/Product/360camera/140pic.jpg?width=140&height=140" alt="">
                                         <p>Mi Home Security Camera 360° 1080P</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="./product-detail.html">
+                                    <a href="#">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/DeskLamp.png?width=140&height=140" alt="">
                                         <p>Mi LED Desk Lamp</p>
                                     </a>
@@ -112,7 +115,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="menu-item">
+                    {/volist}
+                    <!--<li class="menu-item">
                         <a class="item-link" href="#">Table Lamp</a>
                         <div class="item-children">
                             <ul class="common-width">
@@ -283,7 +287,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
@@ -296,63 +300,41 @@
 
     <div class="banner swiper-container">
         <div class=" swiper-wrapper">
+            {volist name="banner" id="vo"}
             <div class="swiper-slide">
                 <div class="des">
                     <h3 data-swiper-parallax="-500" data-swiper-parallax-opacity="0">
-                        AC1200 Dual Band Smart Touchlink Giga WiFi Router
+                        {$vo.title}
                     </h3>
                     <p data-swiper-parallax="-1500" data-swiper-parallax-opacity="0">
-                        One-Key Operation for Better Router Performance
+                        {$vo.description}
                     </p>
                     <span>
                         <a data-swiper-parallax="-4500" data-swiper-parallax-opacity="0">
-                            QUANTUM D4G
+                            {$vo.button}
                         </a>
                     </span>
                 </div>
                 <div class="img-box">
-                    <a href="#">
-                        <img src="https://cloud.wavlink.com/index.php?user/publicLink&fid=7af8RpicsQdPOVGMie2Z9W1ggW-ZCSaQ7PyOW7xo9dZ5UjJyl_9vl1ebI2oCf8DqztmXOojEukpKE0Z4KxYbAEG4JdCQ1Rqh0AFN2xWamc7ikEzjLJMBOC4DyHuhJlybd0Nw8LA-4cDqSVGqu7XYxHKOqFpzG5Bnl-WRJZpxqvmTUukQ8qA&file_name=/WN575A4.jpg" alt="">
+                    <a href="{$vo.path}">
+                        <img src="{$vo.image}" alt="">
                     </a>
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="des">
-                    <h3 data-swiper-parallax="-500" data-swiper-parallax-opacity="0">
-                        AC1200 Dual Band Smart Touchlink Giga WiFi Router
-                    </h3>
-                    <p data-swiper-parallax="-1500" data-swiper-parallax-opacity="0">
-                        One-Key Operation for Better Router Performance
-                    </p>
-                    <span>
-                        <a href="#" data-swiper-parallax="-4500" data-swiper-parallax-opacity="0">
-                            QUANTUM D4G
-                        </a>
-                    </span>
-                </div>
-                <div class="img-box">
-                    <a href="#">
-                        <img src="https://cloud.wavlink.com/index.php?user/publicLink&fid=7f5aRFG5A1uwdlrCWobFpKj_J23rgwtPJkz89ZjIIQ1g8d7ZzEqmNZGY2XZHEePohV7ZNCW5wWz8v9k_yYC9de95ZFHHdY92coxnYaksaZx-sRvK5WH-Tm1xwsrQTIRfmQFUUQ7TSUXEJ_XB7qW-XtFNkXe0i9IZYcqrz8SaOdji-TIAi-O2n_8&file_name=/Aerial%20X.jpg" alt="">
-                    </a>
-                </div>
-            </div>
+            {/volist}
         </div>
         <div class="swiper-pagination"></div><!--分页器-->
         <div class="swiper-button-prev"></div><!--左箭头-->
         <div class="swiper-button-next"></div><!--右箭头-->
     </div>
 
-    <div class="min common-width">
+    <div class="hot common-width">
         <div class="min-list">
+            {volist name="hot" id="vo"}
             <div class="min-item">
-                <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/1.jpg?width=398&height=230&160516" alt=""></a>
+                <a href="{$vo.path}"><img src="{$vo.image}" alt=""></a>
             </div>
-            <div class="min-item">
-                <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/8.jpg?width=398&height=230&160516" alt=""></a>
-            </div>
-            <div class="min-item">
-                <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/scooter20190303.jpg?width=398&height=230&160516" alt=""></a>
-            </div>
+            {/volist}
         </div>
     </div>
 
@@ -361,19 +343,15 @@
         <div class="star-list">
             <div class="left">
                 <div class="star-item">
-                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/4.jpg?width=612&height=612" alt=""></a>
+                    <a href="{$starProduct[0]['path']}"><img src="{$starProduct[0]['image']}" alt=""></a>
                 </div>
             </div>
             <div class="right">
+                {volist name="starProduct" id="vo" offset='1' length="3"}
                 <div class="star-item">
-                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/5.jpg?width=612&height=612" alt=""></a>
+                    <a href="{$vo.path}"><img src="{$vo.image}" alt=""></a>
                 </div>
-                <div class="star-item">
-                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/6.jpg?width=612&height=612" alt=""></a>
-                </div>
-                <div class="star-item">
-                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/7.jpg?width=612&height=612" alt=""></a>
-                </div>
+                {/volist}
             </div>
         </div>
     </div>
