--- a/public/static/frontend/desktop/css/page/Home.less
+++ b/public/static/frontend/desktop/css/page/Home.less
@@ -17,6 +17,7 @@
             position: absolute;
             top: 30%;
             left: 15%;
+            width: 45%;
             cursor: auto;
         }
         .des h3 {
@@ -61,7 +62,7 @@
     }
 }
 
-.min {
+.hot {
     margin-top: 20px;
     text-align: center;
     .min-list {
