--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -113,6 +113,7 @@ body {
     text-align: center;
     color: @whiteSmoke;
     .des {
+        display: inline;
         color: @whiteSmoke;
         #transition(all .2s linear);
         &:hover {
