升级框架和调整测试版

--- a/app/admin/view/common/copyright.html
+++ b/app/admin/view/common/copyright.html
@@ -1,5 +1,5 @@
 <div class="layui-fluid">
     <div class="layui-col-md12">
-        <blockquote class="layui-elem-quote layui-quote-nm">版权信息后期统一更新</blockquote>
+        <blockquote class="layui-elem-quote layui-quote-nm">欣博跃电子有限公司,市场部-信息组</blockquote>
     </div>
 </div>
