--- a/app/admin/view/media/image/upload.html
+++ b/app/admin/view/media/image/upload.html
@@ -14,17 +14,13 @@
                 </div>
                 <br>
                 <div class="layui-input-block">
+                    <label class="layui-form-label">
+                        上传进度
+                    </label>
                     <div class="layui-progress" lay-showPercent="true" lay-filter="progress">
                         <div class="layui-progress-bar layui-bg-green" lay-percent=""></div>
                     </div>
                 </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">
-                </label>
-                <button class="layui-btn" lay-filter="add" lay-submit="">
-                    上传
-                </button>
             </div>
         </form>
     </div>
