--- a/app/admin/view/common/header.html
+++ b/app/admin/view/common/header.html
@@ -28,19 +28,19 @@
         </li>
     </ul>-->
     <ul class="layui-nav right" lay-filter="">
+        <li class="layui-nav-item to-index"><a href="/">{$adminUser.title}:{$adminUser.username}</a></li>
+        <li class="layui-nav-item to-index"><a href="/">前台首页</a></li>
         <li class="layui-nav-item">
-            <a href="javascript:;">admin</a>
+            <a href="{:url('user/logout')}">退出登录</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="javascript:;">切换语言</a>
             <dl class="layui-nav-child">
                 <!-- 二级菜单 -->
-                <dd>
-                    <a onclick="xadmin.open('个人信息','http://www.baidu.com')">个人信息</a></dd>
-                <dd>
-                    <a onclick="xadmin.open('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
-                <dd>
-                    <a href="./login.html">退出</a></dd>
+                {volist name="languageList" id="vo"}
+                <dd><a href="{:url('system/changeLanguage',['code'=>$vo.code])}">{$vo.name}</a></dd>
+                {/volist}
             </dl>
         </li>
-        <li class="layui-nav-item to-index">
-            <a href="/">前台首页</a></li>
     </ul>
 </div>
